Started adding basic documentation for the required components and google auth integration.

--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-
+    <meta name="google-signin-client_id" content="793664102602-fjnshkklo4e2mbmftlhmfn1fo8ruafff.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <title>Roll Initiative</title>
   </head>
   <body>
